--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,17 @@
 
 # production
 /build
+/.next/
+/out/
 
 # misc
 .DS_Store
 *.pem
+*.log
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # debug
 npm-debug.log*
