--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
