--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "next": "15.5.2",
+    "npm": "^11.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
